--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <kotlin.version>1.1.3-2</kotlin.version>
-        <main.class>HelloWorldKt</main.class>
+        <main.class>MainKt</main.class>
     </properties>
 
     <dependencies>
