--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Release</groupId>
-    <artifactId>Helloworld</artifactId>
+    <artifactId>TrafficSimulation</artifactId>
     <version>2.0-SNAPSHOT</version>
 
     <properties>
         <kotlin.version>1.1.3-2</kotlin.version>
-        <main.class>MainKt</main.class>
+        <main.class>Traffic_Simulation.MainKt</main.class>
     </properties>
 
     <dependencies>
@@ -30,6 +30,12 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+            <version>2.5.1</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
