--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <kotlin.version>1.1.3-2</kotlin.version>
-        <main.class>Traffic_Simulation.MainKt</main.class>
+        <main.class>traffic_simulation.MainKt</main.class>
     </properties>
 
     <dependencies>
@@ -30,12 +30,6 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.univocity</groupId>
-            <artifactId>univocity-parsers</artifactId>
-            <version>2.5.1</version>
-            <type>jar</type>
         </dependency>
     </dependencies>
 
